--- a/Sales_EDA.ipynb
+++ b/Sales_EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ08cqqbkV5fi34DiwjBEM",
+      "authorship_tag": "ABX9TyPmwjqQ6aFr4lxd7BWvOeeJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
           "height": 206
         },
         "id": "56PSuWQAHx0v",
-        "outputId": "fbb2a07f-66ca-4c45-ccf6-63ff912ac9af"
+        "outputId": "2da63857-837c-45e7-bbcd-9f371a418727"
       },
       "execution_count": 2,
       "outputs": [
@@ -118,7 +118,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af301050-6d13-49af-97c8-89ecc458d829\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-25cb6067-7a58-4355-91d6-8b8b4529df37\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -215,7 +215,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af301050-6d13-49af-97c8-89ecc458d829')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25cb6067-7a58-4355-91d6-8b8b4529df37')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -267,12 +267,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-af301050-6d13-49af-97c8-89ecc458d829 button.colab-df-convert');\n",
+              "        document.querySelector('#df-25cb6067-7a58-4355-91d6-8b8b4529df37 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-af301050-6d13-49af-97c8-89ecc458d829');\n",
+              "        const element = document.querySelector('#df-25cb6067-7a58-4355-91d6-8b8b4529df37');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -292,8 +292,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e854a1e8-41a4-4a49-bf43-27dbd2dc57b6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e854a1e8-41a4-4a49-bf43-27dbd2dc57b6')\"\n",
+              "<div id=\"df-3a57672c-594e-48c7-ab11-2acfb1c2a054\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3a57672c-594e-48c7-ab11-2acfb1c2a054')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -412,7 +412,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e854a1e8-41a4-4a49-bf43-27dbd2dc57b6 button');\n",
+              "        document.querySelector('#df-3a57672c-594e-48c7-ab11-2acfb1c2a054 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -452,7 +452,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XDVCHg9GZOpT",
-        "outputId": "762226b6-fd3e-4ff9-b425-a9633ab1ab64"
+        "outputId": "5c77f899-6da4-47d9-8ca6-575f1343f2c2"
       },
       "execution_count": 3,
       "outputs": [
@@ -489,7 +489,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cfuTYBYcZmIj",
-        "outputId": "198afef2-56fe-48da-8231-10b327f1744f"
+        "outputId": "f946ea9c-5b60-4806-8eea-83b303c7c46b"
       },
       "execution_count": 4,
       "outputs": [
@@ -518,7 +518,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uR7tjj0Zck9G",
-        "outputId": "3004de0e-e78b-4afd-d3a1-584a766f3769"
+        "outputId": "1d7d8a07-1933-4c40-e091-a0f5509c223d"
       },
       "execution_count": 5,
       "outputs": [
@@ -570,7 +570,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0cbq-2uAc8Sg",
-        "outputId": "67af795e-678c-4035-816c-1cac0856a2b0"
+        "outputId": "4b915b14-4017-4041-c306-809d570275ce"
       },
       "execution_count": 6,
       "outputs": [
@@ -610,7 +610,7 @@
           "height": 300
         },
         "id": "BVTLWtnjkg7k",
-        "outputId": "73d15364-3988-4c92-efd9-b5bc15daa908"
+        "outputId": "f7f444b5-c80b-4fe6-9de1-fe60a1405d96"
       },
       "execution_count": 7,
       "outputs": [
@@ -630,7 +630,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b789480-b66c-44f1-b5d4-b0f1d31b189f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f8a5f16e-d3c3-4038-afbb-9a56afc416ed\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -727,7 +727,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b789480-b66c-44f1-b5d4-b0f1d31b189f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f8a5f16e-d3c3-4038-afbb-9a56afc416ed')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -779,12 +779,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6b789480-b66c-44f1-b5d4-b0f1d31b189f button.colab-df-convert');\n",
+              "        document.querySelector('#df-f8a5f16e-d3c3-4038-afbb-9a56afc416ed button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6b789480-b66c-44f1-b5d4-b0f1d31b189f');\n",
+              "        const element = document.querySelector('#df-f8a5f16e-d3c3-4038-afbb-9a56afc416ed');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -804,8 +804,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8a687224-fbce-4b18-932a-e645a7da0bca\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8a687224-fbce-4b18-932a-e645a7da0bca')\"\n",
+              "<div id=\"df-f5e67b0a-d8ab-49d6-bdca-b8f68743c7a3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f5e67b0a-d8ab-49d6-bdca-b8f68743c7a3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -924,7 +924,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8a687224-fbce-4b18-932a-e645a7da0bca button');\n",
+              "        document.querySelector('#df-f5e67b0a-d8ab-49d6-bdca-b8f68743c7a3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -952,7 +952,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-5s7122if-K",
-        "outputId": "2824020d-b365-4151-ac8d-69f0a8a61aed"
+        "outputId": "b6a61988-7a89-4e87-cbce-e14c8b46df40"
       },
       "execution_count": 8,
       "outputs": [
@@ -983,7 +983,7 @@
           "height": 175
         },
         "id": "m6jaMk_9Eu57",
-        "outputId": "31f15aac-c4eb-4063-f03c-eb416200bb5c"
+        "outputId": "67323bbf-631f-4422-9298-75a84c3c1ffa"
       },
       "execution_count": 9,
       "outputs": [
@@ -999,7 +999,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49df9357-92bf-4940-b713-24982ebb6d71\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c26b0a3e-f108-461b-b589-82fb9737c40d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1044,7 +1044,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49df9357-92bf-4940-b713-24982ebb6d71')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c26b0a3e-f108-461b-b589-82fb9737c40d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1096,12 +1096,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-49df9357-92bf-4940-b713-24982ebb6d71 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c26b0a3e-f108-461b-b589-82fb9737c40d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-49df9357-92bf-4940-b713-24982ebb6d71');\n",
+              "        const element = document.querySelector('#df-c26b0a3e-f108-461b-b589-82fb9737c40d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1121,8 +1121,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b315a30f-f9a3-46e3-bde0-ca71d994481a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b315a30f-f9a3-46e3-bde0-ca71d994481a')\"\n",
+              "<div id=\"df-c1bc7cd8-a678-420a-8d19-bf7a8fe92005\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c1bc7cd8-a678-420a-8d19-bf7a8fe92005')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1241,7 +1241,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b315a30f-f9a3-46e3-bde0-ca71d994481a button');\n",
+              "        document.querySelector('#df-c1bc7cd8-a678-420a-8d19-bf7a8fe92005 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1297,7 +1297,7 @@
           "height": 206
         },
         "id": "4xVLxwvfV7hf",
-        "outputId": "4ca49122-ef5f-4381-ae1c-72dd67c5cec0"
+        "outputId": "5180f56b-3438-4737-a50e-3554480fdac6"
       },
       "execution_count": 10,
       "outputs": [
@@ -1314,7 +1314,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8b745e85-ee33-4280-a06f-9ba95132e983\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5b7ff0e1-2179-44a6-aa78-e838828a0944\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1378,7 +1378,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b745e85-ee33-4280-a06f-9ba95132e983')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5b7ff0e1-2179-44a6-aa78-e838828a0944')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1430,12 +1430,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8b745e85-ee33-4280-a06f-9ba95132e983 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5b7ff0e1-2179-44a6-aa78-e838828a0944 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8b745e85-ee33-4280-a06f-9ba95132e983');\n",
+              "        const element = document.querySelector('#df-5b7ff0e1-2179-44a6-aa78-e838828a0944');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1455,8 +1455,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c19b01f9-e2fe-4d9e-bf1a-04e5c5d8d447\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c19b01f9-e2fe-4d9e-bf1a-04e5c5d8d447')\"\n",
+              "<div id=\"df-c53537e4-df2f-4b23-8147-f157041de209\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c53537e4-df2f-4b23-8147-f157041de209')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1575,7 +1575,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c19b01f9-e2fe-4d9e-bf1a-04e5c5d8d447 button');\n",
+              "        document.querySelector('#df-c53537e4-df2f-4b23-8147-f157041de209 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1595,16 +1595,17 @@
       "cell_type": "code",
       "source": [
         "# Total Sales\n",
-        "data[[\"Total_Amount\"]].sum()"
+        "totSales = data[[\"Total_Amount\"]].sum()\n",
+        "totSales"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "237Fh8m9Wn0K",
-        "outputId": "e0b2cf0e-2ad7-41e3-c02b-691e42611f8e"
+        "outputId": "d9bbd88e-5d0b-4944-be6f-f527a2dd098f"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1615,35 +1616,6 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Order Value equal Total Amount / Quantity which is same with the Price per unit\n",
-        "orderValue = data[[\"Price_per_Unit\"]].mean()\n",
-        "orderValue"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LjGGFze7XHeE",
-        "outputId": "f6598df6-f88f-40ab-b2cf-e30e573b56fb"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Price_per_Unit    188.282828\n",
-              "dtype: float64"
-            ]
-          },
-          "metadata": {},
           "execution_count": 12
         }
       ]
@@ -1651,16 +1623,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Sales greater than average Order Value\n",
-        "greaterSales = data[data[\"Total_Amount\"] > 188.282828]\n",
-        "greaterSales.shape"
+        "# Total Quantity\n",
+        "totQTy = data[[\"Quantity\"]].sum()\n",
+        "totQTy"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wa9LaTCB-hJP",
-        "outputId": "1ce2bcb8-9643-4fe7-bc7f-10871ee82e6c"
+        "id": "LX_aAB-taI6q",
+        "outputId": "1b8cc3f5-5ada-42b3-b1f0-568b618c415e"
       },
       "execution_count": 13,
       "outputs": [
@@ -1668,11 +1640,42 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(46, 9)"
+              "Quantity    250\n",
+              "dtype: int64"
             ]
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Order Value equal Total Amount / Quantity which is same with the Price per unit = 190.36\n",
+        "orderValue = totQTy.divide(totSales)\n",
+        "orderValue"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LjGGFze7XHeE",
+        "outputId": "93ef2fd1-12a6-4dc4-da08-066295c3b953"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Quantity       NaN\n",
+              "Total_Amount   NaN\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
@@ -2080,7 +2083,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# setting the figure size\n",
+        "# Top 10 sales by Month.\n",
+        "# We can see that the peak month is between May/June\n",
+        "\n",
         "plt.figure(figsize=(15,6))\n",
         "plt.plot(data_trend['Date'],data_trend['Total_Amount'], color = '#b80045')\n",
         "plt.xticks(rotation = 'vertical', size=8)\n",
@@ -2089,7 +2094,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 555
+          "height": 505
         },
         "id": "mJLFj8Fwx3K7",
         "outputId": "f6190442-c392-4fde-af6d-b2991e590bcd"
@@ -2196,7 +2201,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 656
         },
         "id": "OriqbJR2agEa",
         "outputId": "a3aae74b-b3a5-4989-d625-f84f4c1e259b"
